<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:padding="20dp"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/startImg"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/startImg"
        android:src="@drawable/welcome_img" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginBtn"
        android:backgroundTint="@color/colorAccentDark"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/registerBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/colorAccentDark"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/loginBtn" />

</RelativeLayout>