<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleImgLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/titleAddPostEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/popup_edittext_style"
            android:hint="@string/titleAddPostEt"
            android:inputType="text|textCapSentences" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarIv"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/user_default_img" />

    </LinearLayout>

    <EditText
        android:id="@+id/descAddPostEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleImgLayout"
        android:background="@drawable/popup_edittext_style"
        android:hint="@string/descAddPostEt"
        android:inputType="text|textCapSentences" />

    <ImageView
        android:id="@+id/imageAddPostIv"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_below="@id/descAddPostEt"
        android:background="#2D2D2D"
        android:contentDescription="@string/imageAddPostIv" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/popAddPostBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/imageAddPostIv"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/circle_add_post_bg"
        android:padding="10dp"
        android:src="@drawable/ic_upload" />

</RelativeLayout>